@@ -1357,19 +1357,19 @@ schema = Schema((
         write_permission="PloneMeeting: Write risky config",
     ),
     LinesField(
-        name='groupsShownInDashboardFilter',
+        name='groupsHiddenInDashboardFilter',
         widget=MultiSelectionWidget(
-            description="GroupsShownInDashboardFilter",
-            description_msgid="groups_shown_in_dashboard_filter_descr",
+            description="GroupsHiddenInDashboardFilter",
+            description_msgid="groups_hidden_in_dashboard_filter_descr",
             format="checkbox",
-            label='Groupsshownindashboardfilter',
-            label_msgid='PloneMeeting_label_groupsShownInDashboardFilter',
+            label='Groupshiddenindashboardfilter',
+            label_msgid='PloneMeeting_label_groupsHiddenInDashboardFilter',
             i18n_domain='PloneMeeting',
         ),
         schemata="gui",
         multiValued=1,
         vocabulary_factory='Products.PloneMeeting.vocabularies.proposinggroupsvocabulary',
-        default=defValues.groupsShownInDashboardFilter,
+        default=defValues.groupsHiddenInDashboardFilter,
         enforceVocabulary=False,
         write_permission="PloneMeeting: Write risky config",
     ),
