@@ -709,7 +709,7 @@
           </td>
         </tr>
         <tr valign="top">
-          <td tal:define="field python:here.getField('groupsShownInDashboardFilter')">
+          <td tal:define="field python:here.getField('groupsHiddenInDashboardFilter')">
             <span metal:use-macro="here/widgets/field/macros/view" />
           </td>
           <td>
